# voice_robot_app_backend

./: .gitignore  Readme.md  client.py  client_deepspeech.py  commands.py  parser.py  pyproject.toml  text_to_speech.py  translations.py  vosk_realtime.py
