[tool.poetry]
name = "deepspeech"
version = "0.1.0"
description = "DeepSpeech server"
authors = ["Yanis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sox = "^1.3.7"
deepspeech-gpu = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
