[tool.poetry]
name = "voicerobot"
version = "0.1.0"
description = "Voice recognition app"
authors = ["Yanis Vasiliadis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sox = "^1.4.1"
#deepspeech = "^0.9.0"


websockets = "^8.1"
pyttsx3 = "^2.90"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
